--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 # fortran compiler
-FC   = mpif90-openmpi-mp
+FC   = mpif90
 #
 BIG := # -mcmodel=medium
 DBG := # -g -fbacktrace -Wall -O0 -Wextra -pedantic -fcheck=all
@@ -14,7 +14,7 @@ TARGET = cans
 #
 OBJ = bound.o chkdiv.o chkdt.o common_mpi.o correc.o debug.o fft.o fftw.o fillps.o initflow.o initgrid.o initmpi.o initsolver.o load.o main.o mom.o momd.o output.o param.o rk.o solver.o decomp_2d.o io.o
 #
-LIBS = -lfftw3 -lm -lfftw3_threads -llapack -lblas
+LIBS = -lfftw3 -lfftw3_threads -llapack
 #
 all: $(TARGET)
 #
@@ -35,11 +35,11 @@ common_mpi.o: common_mpi.f90 param.o
 	$(FC) $(FFLAGS) -c  common_mpi.f90 
 correc.o: correc.f90
 	$(FC) $(FFLAGS) -c  correc.f90 
-debug.o: debug.f90
+debug.o: debug.f90 common_mpi.o
 	$(FC) $(FFLAGS) -c  debug.f90 
 fillps.o: fillps.f90
 	$(FC) $(FFLAGS) -c  fillps.f90
-fft.o: fft.f90 fftw.o
+fft.o: fft.f90 common_mpi.o fftw.o
 	$(FC) $(FFLAGS) -c  fft.f90
 fftw.o: fftw.f90
 	$(FC) $(FFLAGS) -c  fftw.f90
@@ -49,17 +49,17 @@ initgrid.o: initgrid.f90 param.o
 	$(FC) $(FFLAGS) -c  initgrid.f90 
 initmpi.o: initmpi.f90 decomp_2d.o common_mpi.o
 	$(FC) $(FFLAGS) -c initmpi.f90
-initsolver.o: initsolver.f90 param.o
+initsolver.o: initsolver.f90 common_mpi.o fft.o param.o
 	$(FC) $(FFLAGS) -c  initsolver.f90 
 load.o: load.f90 common_mpi.o decomp_2d.o io.o
 	$(FC) $(FFLAGS) -c  load.f90 
 main.o: main.f90 bound.o chkdiv.o chkdt.o debug.o fft.o fillps.o initflow.o initflow.o initgrid.o initmpi.o initsolver.o load.o output.o param.o rk.o solver.o
 	$(FC) $(FFLAGS) -c  main.f90
-mom.o: mom.f90
+mom.o: mom.f90 common_mpi.o
 	$(FC) $(FFLAGS) -c  mom.f90
-momd.o: momd.f90
+momd.o: momd.f90 common_mpi.o
 	$(FC) $(FFLAGS) -c  momd.f90
-output.o: output.f90
+output.o: output.f90 io.o
 	$(FC) $(FFLAGS) -c  output.f90
 param.o: param.f90 setup.h90 bc.h90
 	$(FC) $(FFLAGS) -c  param.f90
