--- a/src/Makefile
+++ b/src/Makefile
@@ -5,14 +5,14 @@ BIG := # -mcmodel=medium
 DBG := # -g -fbacktrace -Wall -O0 -Wextra -pedantic -fcheck=all
 OMP := # -fopenmp
 OPT := -O3
-OTH := -DDEBUG -DTIMING#  -DIMPDIFF
+OTH := -DDEBUG -DTIMING #-DIMPDIFF
 PROF := #-pg
 FFLAGS := -cpp $(OPT) $(BIG) $(DBG) $(PROF) $(OMP) $(OTH)
 
 #
 TARGET = cans
 #
-OBJ = bound.o chkdiv.o chkdt.o common_mpi.o correc.o debug.o fft.o fftw.o fillps.o initflow.o initgrid.o initmpi.o initsolver.o load.o main.o mom.o momd.o output.o param.o rk.o solver.o decomp_2d.o io.o
+OBJ = bound.o chkdiv.o chkdt.o common_mpi.o correc.o debug.o fft.o fftw.o fillps.o initflow.o initgrid.o initmpi.o initsolver.o load.o main.o mom.o momd.o moms.o output.o param.o rk.o sanity.o solver.o decomp_2d.o io.o
 #
 LIBS = -lfftw3 -lfftw3_threads -llapack
 #
@@ -53,18 +53,22 @@ initsolver.o: initsolver.f90 common_mpi.o fft.o param.o
 	$(FC) $(FFLAGS) -c  initsolver.f90 
 load.o: load.f90 common_mpi.o decomp_2d.o io.o
 	$(FC) $(FFLAGS) -c  load.f90 
-main.o: main.f90 bound.o chkdiv.o chkdt.o debug.o fft.o fillps.o initflow.o initflow.o initgrid.o initmpi.o initsolver.o load.o output.o param.o rk.o solver.o
+main.o: main.f90 bound.o chkdiv.o chkdt.o debug.o fft.o fillps.o initflow.o initflow.o initgrid.o initmpi.o initsolver.o load.o output.o param.o rk.o sanity.o solver.o
 	$(FC) $(FFLAGS) -c  main.f90
 mom.o: mom.f90 common_mpi.o
 	$(FC) $(FFLAGS) -c  mom.f90
 momd.o: momd.f90 common_mpi.o
 	$(FC) $(FFLAGS) -c  momd.f90
+moms.o: moms.f90
+	$(FC) $(FFLAGS) -c  moms.f90
 output.o: output.f90 io.o
 	$(FC) $(FFLAGS) -c  output.f90
 param.o: param.f90 setup.h90 bc.h90
 	$(FC) $(FFLAGS) -c  param.f90
-rk.o: rk.f90 debug.o mom.o momd.o param.o
+rk.o: rk.f90 debug.o mom.o momd.o moms.o param.o
 	$(FC) $(FFLAGS) -c  rk.f90
+sanity.o: sanity.f90 bound.o chkdiv.o common_mpi.o correc.o debug.o fft.o fillps.o initflow.o initmpi.o initsolver.o param.o solver.o
+	$(FC) $(FFLAGS) -c  sanity.f90
 solver.o: solver.f90 fft.o param.o
 	$(FC) $(FFLAGS) -c  solver.f90
 #
