removed lapack library

--- a/src/Makefile
+++ b/src/Makefile
@@ -14,7 +14,7 @@ TARGET = cans
 #
 OBJ = bound.o chkdiv.o chkdt.o common_mpi.o correc.o debug.o fft.o fftw.o fillps.o initflow.o initgrid.o initmpi.o initsolver.o load.o main.o mom.o momd.o moms.o output.o param.o rk.o sanity.o solver.o decomp_2d.o io.o
 #
-LIBS = -lfftw3 -lfftw3_threads -llapack
+LIBS = -lfftw3 -lfftw3_threads
 #
 all: $(TARGET)
 #
