--- a/src/Makefile
+++ b/src/Makefile
@@ -1,14 +1,15 @@
 # src directory
 SRCDIR := $(pwd)
 RUNDIR := $(SRCDIR)'../run'
+DATDIR := $(RUNDIR)'/data'
 #
 # fortran compiler
 FC   = mpif90
 # flags
 BIG := # -mcmodel=medium
-DBG :=  -g -fbacktrace -Wall -O0 -Wextra -pedantic -fcheck=all
+DBG := # -g -fbacktrace -Wall -O0 -Wextra -pedantic -fcheck=all
 OMP := # -fopenmp
-OPT := #-O3
+OPT := -O3
 OTH := -DDEBUG -DTIMING #-DIMPDIFF
 PROF := #-pg
 FFLAGS := $(OPT) $(BIG) $(DBG) $(PROF) $(OMP) $(OTH)
@@ -19,6 +20,9 @@ OBJ = bound.o chkdiv.o chkdt.o common_mpi.o correc.o debug.o fft.o fftw.o fillps
 LIBS = -L /usr/local/Cellar/fftw/3.3.8_1/lib  -lfftw3 -lfftw3_threads
 #
 all: $(TARGET)
+	@ mkdir -p $(RUNDIR) $(DATDIR)
+	@ cp {$(TARGET),dns.in,INFO_INPUT.md} $(RUNDIR)
+	@ echo "\nExecutable file $(TARGET) and input file dns.in copyed to run folder $(RUNDIR)"
 #
 $(TARGET): $(OBJ)
 	$(FC) $(FFLAGS) $(OBJ) $(LIBS) -o $(TARGET)
