--- a/examples/_manuscript_taylor_green_vortex/dns.in
+++ b/examples/_manuscript_taylor_green_vortex/dns.in
@@ -1,11 +1,11 @@
-64 64 64                 ! itot, jtot, ktot
-1. 1. 1.                 ! lx, ly, lz
+512 512 512              ! itot, jtot, ktot
+6.283185307179586 6.283185307179586 6.283185307179586 ! lx, ly, lz
 0.                       ! gr
 .95                      ! cfl
-1. 1. 1000.              ! uref, lref, rey
-zer                      ! inivel
+1. 1. 1600.              ! uref, lref, rey
+tgv                      ! inivel
 F                        ! is_wallturb
-10000                    ! nstep
+100000                   ! nstep
 F                        ! restart
 10 10 20 500 1000 2000   ! icheck, iout0d, iout1d, iout2d, iout3d, isave
 P P  P P  P P            ! cbcvel(0:1,1:3,1) [u BC type]
