--- a/examples/couette/dns.in
+++ b/examples/couette/dns.in
@@ -1,18 +1,18 @@
 64 64 64                 ! itot, jtot, ktot
-1. 1. 1.                 ! lx, ly, lz
+1. 1.5 1.                ! lx, ly, lz
 0.                       ! gr
 .95                      ! cfl
 1. 1. 1000.              ! uref, lref, rey
-zer                      ! inivel
+cou                      ! inivel
 F                        ! is_wallturb
-10000                    ! nstep
+20000                    ! nstep
 F                        ! restart
 10 10 20 500 1000 2000   ! icheck, iout0d, iout1d, iout2d, iout3d, isave
-P P  P P  P P            ! cbcvel(0:1,1:3,1) [u BC type]
-P P  P P  P P            ! cbcvel(0:1,1:3,2) [v BC type]
-P P  P P  P P            ! cbcvel(0:1,1:3,3) [w BC type]
-P P  P P  P P            ! cbcpre(0:1,1:3,1) [p BC type]
-0. 0.  0. 0.  0. 0.      ! cbcvel(0:1,1:3,1) [u BC value]
+P P  P P  D D            ! cbcvel(0:1,1:3,1) [u BC type]
+P P  P P  D D            ! cbcvel(0:1,1:3,2) [v BC type]
+P P  P P  D D            ! cbcvel(0:1,1:3,3) [w BC type]
+P P  P P  N N            ! cbcpre(0:1,1:3,1) [p BC type]
+0. 0.  0. 0.  .5 -.5     ! cbcvel(0:1,1:3,1) [u BC value]
 0. 0.  0. 0.  0. 0.      ! cbcvel(0:1,1:3,2) [v BC value]
 0. 0.  0. 0.  0. 0.      ! cbcvel(0:1,1:3,3) [w BC value]
 0. 0.  0. 0.  0. 0.      ! cbcpre(0:1,1:3,1) [p BC value]
