--- a/src/Makefile
+++ b/src/Makefile
@@ -25,12 +25,14 @@ OBJ = bound.o chkdiv.o chkdt.o common_mpi.o correc.o debug.o fft.o fftw.o fillps
 LIBS = -L /usr/local/Cellar/fftw/3.3.8_1/lib  -lfftw3 -lfftw3_threads
 #
 all: $(TARGET)
-	@mkdir -p $(RUNDIR) $(DATDIR)
-	@cp {$(TARGET),dns.in,INFO_INPUT.md} $(RUNDIR)
-	@echo "\nExecutable file $(TARGET) and input file dns.in copyed to run folder $(RUNDIR)"
 #
 $(TARGET): $(OBJ)
 	$(FC) $(FFLAGS) $(OBJ) $(LIBS) -o $(TARGET)
+#
+run: $(TARGET)
+	@mkdir -p $(RUNDIR) $(DATDIR)
+	@cp {$(TARGET),dns.in,INFO_INPUT.md} $(RUNDIR)
+	@echo "\nExecutable file $(TARGET) and input file dns.in copyed to run folder $(RUNDIR)"
 #
 .PHONY: clean
 clean:
