new input file implementation completed

--- a/src/Makefile
+++ b/src/Makefile
@@ -31,7 +31,7 @@ $(TARGET): $(OBJ)
 #
 run: $(TARGET)
 	@mkdir -p $(RUNDIR) $(DATDIR)
-	@cp {$(TARGET),dns.in,INFO_INPUT.md} $(RUNDIR)
+	@cp {$(TARGET),dns.in} $(RUNDIR)
 	@echo "\nExecutable file $(TARGET) and input file dns.in copyed to run folder $(RUNDIR)"
 #
 .PHONY: clean
