--- a/examples/developing_channel/dns.in
+++ b/examples/developing_channel/dns.in
@@ -11,11 +11,11 @@ F                        ! restart
 D N  P P  D D            ! cbcvel(0:1,1:3,1) [u BC type]
 N N  P P  D D            ! cbcvel(0:1,1:3,2) [v BC type]
 N N  P P  D D            ! cbcvel(0:1,1:3,3) [w BC type]
-N D  P P  N N            ! cbcpre(0:1,1:3,1) [p BC type]
-1. 0.  0. 0.  0. 0.      ! cbcvel(0:1,1:3,1) [u BC value]
-0. 0.  0. 0.  0. 0.      ! cbcvel(0:1,1:3,2) [v BC value]
-0. 0.  0. 0.  0. 0.      ! cbcvel(0:1,1:3,3) [w BC value]
-0. 0.  0. 0.  0. 0.      ! cbcpre(0:1,1:3,1) [p BC value]
+N D  P P  N N            ! cbcpre(0:1,1:3  ) [p BC type]
+1. 0.  0. 0.  0. 0.      !  bcvel(0:1,1:3,1) [u BC value]
+0. 0.  0. 0.  0. 0.      !  bcvel(0:1,1:3,2) [v BC value]
+0. 0.  0. 0.  0. 0.      !  bcvel(0:1,1:3,3) [w BC value]
+0. 0.  0. 0.  0. 0.      !  bcpre(0:1,1:3  ) [p BC value]
 F F F                    ! is_forced(1:3)
 0. 0. 0.                 ! velf(1:3)
 F T  F F  F F            ! is_outflow(0:1,1:3)
