--- a/examples/periodic_duct/dns.in
+++ b/examples/periodic_duct/dns.in
@@ -11,11 +11,11 @@ F                        ! restart
 P P  D D  D D            ! cbcvel(0:1,1:3,1) [u BC type]
 P P  D D  D D            ! cbcvel(0:1,1:3,2) [v BC type]
 P P  D D  D D            ! cbcvel(0:1,1:3,3) [w BC type]
-P P  N N  N N            ! cbcpre(0:1,1:3,1) [p BC type]
-0. 0.  0. 0.  0. 0.      ! cbcvel(0:1,1:3,1) [u BC value]
-0. 0.  0. 0.  0. 0.      ! cbcvel(0:1,1:3,2) [v BC value]
-0. 0.  0. 0.  0. 0.      ! cbcvel(0:1,1:3,3) [w BC value]
-0. 0.  0. 0.  0. 0.      ! cbcpre(0:1,1:3,1) [p BC value]
+P P  N N  N N            ! cbcpre(0:1,1:3  ) [p BC type]
+0. 0.  0. 0.  0. 0.      !  bcvel(0:1,1:3,1) [u BC value]
+0. 0.  0. 0.  0. 0.      !  bcvel(0:1,1:3,2) [v BC value]
+0. 0.  0. 0.  0. 0.      !  bcvel(0:1,1:3,3) [w BC value]
+0. 0.  0. 0.  0. 0.      !  bcpre(0:1,1:3  ) [p BC value]
 T F F                    ! is_forced(1:3)
 1. 0. 0.                 ! velf(1:3)
 F F  F F  F F            ! is_outflow(0:1,1:3)
