--- a/src/dns.in
+++ b/src/dns.in
@@ -1,13 +1,13 @@
-512 256 144              ! itot, jtot, ktot
-6. 3. 1.                 ! lx, ly, lz
+64 64 64                 ! itot, jtot, ktot
+3. 1.5 1.                ! lx, ly, lz
 0.                       ! gr
 .95                      ! cfl
-1. 1. 5640.              ! uref, lref, rey
-poi                      ! inivel
-T                        ! is_wallturb
+1. 1. 1000.              ! uref, lref, rey
+log                      ! inivel
+F                        ! is_wallturb
 100000                   ! nstep
 F                        ! restart
-10 10 100 500 10000 5000 ! icheck, iout0d, iout1d, iout2d, iout3d, isave
+10 10 20 500 1000 2000   ! icheck, iout0d, iout1d, iout2d, iout3d, isave
 P P  P P  D D            ! cbcvel(0:1,1:3,1) [u BC type]
 P P  P P  D D            ! cbcvel(0:1,1:3,2) [v BC type]
 P P  P P  D D            ! cbcvel(0:1,1:3,3) [w BC type]
