--- a/examples/developing_channel/dns.in
+++ b/examples/developing_channel/dns.in
@@ -20,4 +20,4 @@ F F F                    ! is_forced(1:3)
 0. 0. 0.                 ! velf(1:3)
 F T  F F  F F            ! is_outflow(0:1,1:3)
 2 2                      ! dims(1:2)
-4                        ! numthreadsmax
+4                        ! nthreadsmax
