added new stopping criteria: in addition to the maximum number of iterations, we have: maximum physical time and maximum wall-clock time

--- a/examples/developing_duct/dns.in
+++ b/examples/developing_duct/dns.in
@@ -5,7 +5,8 @@
 1. 1. 1000.              ! uref, lref, rey
 zer                      ! inivel
 F                        ! is_wallturb
-20000                    ! nstep
+20000 100. 0.1           ! nstep,time_max,tw_max
+T F F                    ! stop_type(1:3)
 F                        ! restart
 10 10 20 500 1000 2000   ! icheck, iout0d, iout1d, iout2d, iout3d, isave
 D N  D D  D D            ! cbcvel(0:1,1:3,1) [u BC type]
