--- a/examples/_manuscript_turbulent_duct/dns.in
+++ b/examples/_manuscript_turbulent_duct/dns.in
@@ -5,7 +5,8 @@
 1. 1. 4410.              ! uref, lref, rey
 poi                      ! inivel
 T                        ! is_wallturb
-100000                   ! nstep
+100000 100. 0.1          ! nstep,time_max,tw_max
+T F F                    ! stop_type(1:3)
 F                        ! restart
 10 10 100 500 10000 5000 ! icheck, iout0d, iout1d, iout2d, iout3d, isave
 P P  D D  D D            ! cbcvel(0:1,1:3,1) [u BC type]
