--- a/src/dns.in
+++ b/src/dns.in
@@ -5,9 +5,10 @@
 1. 1. 1000.              ! uref, lref, rey
 log                      ! inivel
 F                        ! is_wallturb
-100000                   ! nstep
+100000 100. 0.1          ! nstep,time_max,tw_max
+T F F                    ! stop_type(1:3)
 F                        ! restart
-10 10 20 500 1000 2000   ! icheck, iout0d, iout1d, iout2d, iout3d, isave
+10 10 200000 50000000 1000 2000   ! icheck, iout0d, iout1d, iout2d, iout3d, isave
 P P  P P  D D            ! cbcvel(0:1,1:3,1) [u BC type]
 P P  P P  D D            ! cbcvel(0:1,1:3,2) [v BC type]
 P P  P P  D D            ! cbcvel(0:1,1:3,3) [w BC type]
