--- a/examples/lid_driven_cavity/dns.in
+++ b/examples/lid_driven_cavity/dns.in
@@ -17,6 +17,7 @@ N N  N N  N N            ! cbcpre(0:1,1:3  ) [p BC type]
 0. 0.  0. 0.  0. 0.      !  bcvel(0:1,1:3,2) [v BC value]
 0. 0.  0. 0.  0. 0.      !  bcvel(0:1,1:3,3) [w BC value]
 0. 0.  0. 0.  0. 0.      !  bcpre(0:1,1:3  ) [p BC value]
+0. 0. 0.                 ! bforce(1:3)
 F F F                    ! is_forced(1:3)
 0. 0. 0.                 ! velf(1:3)
 F F  F F  F F            ! is_outflow(0:1,1:3)
