--- a/src/dns.in
+++ b/src/dns.in
@@ -1,10 +1,10 @@
 64 64 64                 ! itot, jtot, ktot
 3. 1.5 1.                ! lx, ly, lz
-0.                       ! gr
+1.                       ! gr
 .95 1.0e5                ! cfl, dtmin
 1. 1. 1000.              ! uref, lref, rey
-log                      ! inivel
-F                        ! is_wallturb
+poi                      ! inivel
+T                        ! is_wallturb
 100000 100. 0.1          ! nstep,time_max,tw_max
 T F F                    ! stop_type(1:3)
 F                        ! restart
@@ -21,5 +21,5 @@ P P  P P  N N            ! cbcpre(0:1,1:3  ) [p BC type]
 T F F                    ! is_forced(1:3)
 1. 0. 0.                 ! velf(1:3)
 F F  F F  F F            ! is_outflow(0:1,1:3)
-2 2                      ! dims(1:2)
+1 2                      ! dims(1:2)
 4                        ! nthreadsmax
