--- a/src/dns.in
+++ b/src/dns.in
@@ -1,14 +1,14 @@
 64 64 64                 ! itot, jtot, ktot
 3. 1.5 1.                ! lx, ly, lz
-0.                       ! gr
+1.                       ! gr
 .95 1.0e5                ! cfl, dtmin
 1. 1. 1000.              ! uref, lref, rey
-log                      ! inivel
-F                        ! is_wallturb
-100000 100. 0.1          ! nstep,time_max,tw_max
+poi                      ! inivel
+T                        ! is_wallturb
+100 100. 0.1             ! nstep,time_max,tw_max
 T F F                    ! stop_type(1:3)
-F                        ! restart
-10 10 200000 50000000 1000 2000   ! icheck, iout0d, iout1d, iout2d, iout3d, isave
+F T                      ! restart,is_overwrite_save
+10 10 200000 10 20 2000   ! icheck, iout0d, iout1d, iout2d, iout3d, isave
 P P  P P  D D            ! cbcvel(0:1,1:3,1) [u BC type]
 P P  P P  D D            ! cbcvel(0:1,1:3,2) [v BC type]
 P P  P P  D D            ! cbcvel(0:1,1:3,3) [w BC type]
