fixed automated test

--- a/.github/workflows/runs.yml
+++ b/.github/workflows/runs.yml
@@ -11,15 +11,14 @@ jobs:
     - uses: actions/checkout@v2
     - name: install software to compile CaNS
       run: sudo apt-get update; sudo apt-get install gfortran libopenmpi-dev libfftw3-dev
-    - name: install software for performing the tests
+    - name: install python dependencies for performing the tests
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
-    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install numpy flake8 pytest
     - name: run all tests
       run: |
         cd tests/
-        for i in *; do cd $i && sh runit.sh && cd -; done
+        for i in *; do cd $i && sh testit.sh && cd -; done
