--- a/.github/workflows/runs.yml
+++ b/.github/workflows/runs.yml
@@ -15,6 +15,7 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
+    - name: install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install numpy flake8 pytest
