--- a/src/dns.in
+++ b/src/dns.in
@@ -1,14 +1,14 @@
 64 64 64                 ! itot, jtot, ktot
 3. 1.5 1.                ! lx, ly, lz
-0.                       ! gr
+1.                       ! gr
 .95 1.0e5                ! cfl, dtmin
 1. 1. 1000.              ! uref, lref, rey
-log                      ! inivel
-F                        ! is_wallturb
+poi                      ! inivel
+T                        ! is_wallturb
 100000 100. 0.1          ! nstep,time_max,tw_max
 T F F                    ! stop_type(1:3)
 F T                      ! restart,is_overwrite_save
-10 10 200000 50000000 1000 2000   ! icheck, iout0d, iout1d, iout2d, iout3d, isave
+10 10 100 500 10000 5000 ! icheck, iout0d, iout1d, iout2d, iout3d, isave
 P P  P P  D D            ! cbcvel(0:1,1:3,1) [u BC type]
 P P  P P  D D            ! cbcvel(0:1,1:3,2) [v BC type]
 P P  P P  D D            ! cbcvel(0:1,1:3,3) [w BC type]
@@ -20,6 +20,5 @@ P P  P P  N N            ! cbcpre(0:1,1:3  ) [p BC type]
 0. 0. 0.                 ! bforce(1:3)
 T F F                    ! is_forced(1:3)
 1. 0. 0.                 ! velf(1:3)
-F F  F F  F F            ! is_outflow(0:1,1:3)
 2 2                      ! dims(1:2)
 4                        ! nthreadsmax
