more robust check of Poisson/Helmholtz solver activated when building with -D_DEBUG
(activated it for the CI too)

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,7 +5,7 @@ BIG := # -mcmodel=medium
 DBG := # -g -fbacktrace -Wall -O0 -Wextra -pedantic -fcheck=all
 OMP := # -fopenmp
 OPT := -O3
-OTH := -D_DEBUG -D_TIMING #-D_IMPDIFF
+OTH := -D_TIMING #-D_IMPDIFF
 PROF := #-pg
 FFLAGS := $(OPT) $(BIG) $(DBG) $(PROF) $(OMP) $(OTH)
 TARGET = cans
