--- a/.github/workflows/runs.yml
+++ b/.github/workflows/runs.yml
@@ -1,6 +1,6 @@
 name: test against benchmark data
 
-on: []
+on: [push, pull_request]
 
 jobs:
   build:
@@ -21,5 +21,6 @@ jobs:
         pip install numpy flake8 pytest
     - name: run all tests
       run: |
+        cd dependencies/2decomp_fft && make && cd -
         cd tests/
         for i in */; do cd $i && sh testit.sh && cd -; done
