fixed flags and better explained build.conf

--- a/build.conf
+++ b/build.conf
@@ -1,17 +1,18 @@
 #
 # compiler and compiling profile
 #
-FCOMP=GNU # other options: NVIDIA, INTEL
-FFLAGS_OPT=1
-FFLAGS_OPT_MAX=0
-FFLAGS_DEBUG=0
-FFLAGS_DEBUG_MAX=0
+FCOMP=GNU           # other options: NVIDIA, INTEL
+FFLAGS_OPT=1        # for production runs
+FFLAGS_OPT_MAX=0    # for production runs (more aggressive optimization)
+FFLAGS_DEBUG=0      # for debugging
+FFLAGS_DEBUG_MAX=0  # for thorough debugging
 #
 # defines
 #
-DEBUG=1
-TIMING=1
-IMPDIFF=0
-IMPDIFF_1D=0
-DECOMP_X=1 # change to 0 when     using IMPDIFF_1D
-DECOMP_Z=0 # change to 1 when NOT using IMPDIFF_1D 
+DEBUG=1            # best = 1 (no performance penalty)
+TIMING=1           # best = 1
+IMPDIFF=0          #
+IMPDIFF_1D=0       # = 1 requires IMPDIFF=1 too
+DECOMP_X=1         # best = 1 if IMPDIFF_1D=0, else 1
+DECOMP_Z=0         # best = 0 if IMPDIFF_1D=1, else 0
+SINGLE_PRECISION=1 # not a good idea to change
